markdown syntax fix

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://squierdotqn.github.io" # the base hostname & protocol for your site
 #twitter_username: jekyllrb
 github_username:  SquierDotQn
-github_username:  Levrifon
+#github_username:  Levrifon
 
 # Build settings
 markdown: kramdown
